--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Un poco sobre mi a través de la música</title> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <!--Link para vincular css-->
-        <link rel="stylesheet" href="/Musica/style.css">
+        <link rel="stylesheet" href="/style.css">
         <!--Code para front-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
